# mirage

./: .gitignore  .gitmodules  README.md  vis_pcd.py
xembody/xembody/src/ros_ws/src/fk_ik_rviz_pkg/: CMakeLists.txt  package.xml
xembody/xembody/src/ros_ws/src/fk_ik_rviz_pkg/description/urdf/: rrbot.urdf.xacro
xembody/xembody/src/ros_ws/src/fk_ik_rviz_pkg/scripts/: panda.urdf  ur5e.urdf
xembody/xembody/src/ros_ws/src/fk_ik_rviz_pkg/scripts/ur5e_description/robots/: ur5e_with_robotiq_gripper.urdf
xembody/xembody/src/ros_ws/src/gazebo_env/: CMakeLists.txt  README.md
xembody/xembody/src/ros_ws/src/gazebo_env/bringup/launch/: panda_and_panda_grippers_gazebo_early_inpaint_classic_real.launch.py  panda_and_panda_grippers_to_ur5_gripper_multi_gazebo_early_inpaint_classic_real.launch.py  panda_gazebo_classic_robosuite.launch.py  panda_gazebo_classic_robosuite_can.launch.py  panda_gazebo_classic_robosuite_lift_square_stack_three_threading.launch.py  panda_gazebo_classic_robosuite_lift_square_stack_three_threading_no_gripper.launch.py  panda_gazebo_classic_robosuite_three_piece_assembly.launch.py  ur5_and_panda_no_gripper_gazebo_classic_real.launch.py  ur5e_gazebo_classic_robosuite.launch.py  ur5e_joint_pointcloud.launch.py
xembody/xembody/src/ros_ws/src/gazebo_env/description/urdf/: d435.urdf.xacro  hand.xacro  nvidia_with_gripper_solo.urdf.xacro  panda_and_panda_grippers_camera_scene_real.urdf.xacro  panda_and_panda_grippers_multi_camera_scene_early_inpaint_wrist_real.urdf.xacro  panda_arm_hand_camera_scene_robosuite_lift_square_stack_three_threading_no_gripper.urdf.xacro  panda_arm_hand_only_ik.urdf  panda_arm_hand_only_ik_robosuite.urdf  panda_arm_hand_ur5e_gripper_scene_real.urdf.xacro  panda_arm_ur5e_gripper.xacro  panda_ik_robosuite.urdf  panda_ur5_gripper_ik_real.urdf  real_panda_cam_no_gripper.urdf.xacro  real_panda_cam_right_wrist.urdf.xacro  real_ur5_cam_left.urdf.xacro  real_ur5_cam_left_wrist.urdf.xacro  ur5_and_panda_gripper_camera_scene_real.urdf.xacro  ur5_and_panda_gripper_multi_camera_early_inpaint_scene_real.urdf.xacro  ur5_and_panda_gripper_multi_camera_scene_real.urdf.xacro  ur5_and_panda_no_gripper_camera_scene_real.urdf.xacro  ur5_and_panda_no_gripper_multi_camera_early_inpaint_scene_real.urdf.xacro  ur5_and_panda_no_gripper_multi_camera_scene_real.urdf.xacro  ur5_ik_real.urdf  ur5_with_gripper.urdf.xacro  ur5_with_gripper_camera_scene_real.urdf.xacro  ur5e_analytical.urdf  ur5e_camera_gazebo_scene.urdf.xacro  ur5e_gazebo.urdf.xacro
xembody/xembody/src/ros_ws/src/gazebo_env/franka_1/: gazebo_robot_depth.npy  gripper_joints.txt  joints.txt  ur5e.pcd
xembody/xembody/src/ros_ws/src/gazebo_env/hardware/include/gazebo_env/: urbot.hpp
xembody/xembody/src/ros_ws/src/gazebo_env/panda_and_panda_grippers_to_ur5_gripper_early_inpaint_control_plugin/: panda_and_panda_grippers_to_ur5_gripper_early_inpaint_control_plugin.cc
xembody/xembody/src/ros_ws/src/gazebo_env/panda_and_panda_grippers_to_ur5_gripper_wrist_early_inpaint_control_plugin/: panda_and_panda_grippers_to_ur5_gripper_wrist_early_inpaint_control_plugin.cc
xembody/xembody/src/ros_ws/src/gazebo_env/panda_control_ur5e_gripper_real_plugin/: panda_control_ur5e_gripper_real_plugin.cc
xembody/xembody/src/ros_ws/src/gazebo_env/real_check/: check_ur5e.py  ur5e_depth_0.npy  ur5e_depth_1.npy  ur5e_depth_2.npy  ur5e_depth_3.npy  ur5e_depth_4.npy
xembody/xembody/src/ros_ws/src/gazebo_env/robosuite_offline_2/: check_npy.py  compare_ground_truth.py  first_part.txt  get_data.py  make_input_for_offline_ros.py
xembody/xembody/src/ros_ws/src/gazebo_env/robosuite_offline_2/offline_ur5e/offline_ur5e_0/: depth.npy  joints.npy
xembody/xembody/src/ros_ws/src/gazebo_env/robotsuite_outputs/: pointcloud.npy  ur5e.txt
xembody/xembody/src/ros_ws/src/gazebo_env/scripts/: convert_depth_to_pointcloud.py  find_rpy_for_cam.py  full_real_panda_ur5e_gripper_joint_state_publisher_node.py  full_ur5_and_panda_gripper_joint_state_publisher_node.py  full_ur5e_joint_state_publisher_node.py  output.pcd  read_data_node.py  read_data_node_real_franka_check2.py  read_data_node_real_ur5_check.py  ur5e_joint_command_publisher.py  write_data_node_panda_gripper_to_panda_ur5_gripper_multi_real_better_early_inpaint.py  write_data_node_panda_gripper_to_panda_ur5_gripper_multi_real_better_early_inpaint_reproject.py  write_data_node_panda_gripper_to_panda_ur5_gripper_multi_real_better_wrist_early_inpaint.py  write_data_node_panda_ur5_gripper_to_panda_gripper_multi_real_better_early_inpaint.py  write_data_node_robosuite_better.py  write_data_node_ur5_to_panda_gripper_multi_real_better.py  write_data_node_ur5_to_panda_gripper_multi_real_better_early_inpaint.py  write_data_node_ur5_to_panda_gripper_real_better.py  write_data_node_ur5_to_panda_no_gripper_multi_real_better.py  write_data_node_ur5_to_panda_no_gripper_multi_real_better_early_inpaint.py  write_data_node_ur5_to_panda_no_gripper_real_better.py
xembody/xembody/src/ros_ws/src/gazebo_env/ur5_and_panda_gripper_control_plugin/: ur5_and_panda_gripper_control_plugin.cc
xembody/xembody/src/ros_ws/src/gazebo_env/ur5_and_panda_no_gripper_control_plugin/: ur5_and_panda_no_gripper_control_plugin.cc
xembody/xembody/src/ros_ws/src/gazebo_env/ur5_and_panda_no_gripper_early_inpaint_control_plugin/: ur5_and_panda_no_gripper_early_inpaint_control_plugin.cc
xembody/xembody/src/ros_ws/src/gazebo_env/ur5_only_point_cloud/: gazebo_pointcloud.pcd  image_diff.py  joints.txt  point_cloud.pcd
xembody/xembody/src/ros_ws/src/gazebo_env/ur5e_1/: joints.npy  pointcloud.npy
xembody/xembody/src/ros_ws/src/gazebo_env/ur5e_2/: joints.npy  pointcloud.npy
xembody/xembody/src/ros_ws/src/gazebo_env/ur5e_3/: depth.npy  joints.npy
xembody/xembody/src/ros_ws/src/gazebo_env/worlds/: no_shadow.world  no_shadow_sim.world
xembody/xembody/src/ros_ws/src/input_filenames_msg/: CMakeLists.txt
xembody/xembody/src/ros_ws/src/input_filenames_msg/msg/: InputFilesRealData.msg  InputFilesRobosuite.msg  InputFilesSimData.msg  MultipleInpaintImages.msg
(+970 files in other folders)
